--- a/EventsAppProject/eventsapp/templates/index.html
+++ b/EventsAppProject/eventsapp/templates/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8" />
-	<link rel="stylesheet" href="css/style.css">
-	<link href="images/favicon.ico" rel="shortcut icon">
-	<title>EventsApp</title>
-</head>
+	<head>
+		<meta charset="utf-8" />
+<!--		<link rel="stylesheet" href="css/style.css">
+		<link href="images/favicon.ico" rel="shortcut icon">
+-->
+		<title>EventsApp</title>
+	</head>
 
-<body>
-	<div class="container">
-	</div>
-</body>
+	<body>
+		<div class="container">
+			<h1>Upcoming Events</h1>
+			<table>
+				<thead>
+					<tr> 
+						<th>Date</th>
+						<th>Event</th>
+						<th>Performers</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for event in events %}
+					<tr>
+						<th>{{ event.datetime }}</th>
+						<th>{{ event.name }}</th>
+						<th>{% for performer in performers %} {{ performer.name }}, {% endfor %}</th>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+			
+		</div>
+	</body>
 </html>
