--- a/firstevent/templates/index.html
+++ b/firstevent/templates/index.html
@@ -26,8 +26,7 @@
 							<th>
 								{% for performer in performers %} 
 									{% if performer.event_id == event.id %}
-										{{ performer.name }},
-										}
+										{{ performer.name }} 
 									{% endif %}
 								{% endfor %}
 							</th>
