--- a/firstevent/static/firstevent/style.css
+++ b/firstevent/static/firstevent/style.css
@@ -1,9 +1,13 @@
 h1 {
-	font-family: Georigia, Times, serif;
+	font-family: Arial;
+}
+body {
+	width: 90%;
+	margin: 0 auto;
 }
 
 table {
-	width: 800px;
+	width: 80%;
 }
 
 th, td { 
@@ -11,6 +15,7 @@ th, td {
 }
 
 th {
+	font-family: Arial;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
 	font-size: 90%;
